jupyterhub_k8s/jupyterhub_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
  labels:
    run: jupyterhub
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 31080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 30443
    name: https
  selector:
    run: jupyterhub
